git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@24 f5341608-8839-0410-823a-0bb850aa70eb

--- a/lang/da.yaml
+++ b/lang/da.yaml
@@ -27,3 +27,4 @@ project_home: Projektets hjemmeside
 report_issue: Rapportér problem
 language: Sprog
 dashboard: Oversigt
+editing_person: Redigerer person
