Translation continued, part 2...

--- a/config/locales/da.yml
+++ b/config/locales/da.yml
@@ -30,6 +30,7 @@ da:
         delimiter: .
   games: 
     name: Navn
+    edit_game: Rediger spil
     actions: Handlinger
     administration: Administration
     edit: Rediger
@@ -41,8 +42,22 @@ da:
       your: Dine spil
     x_on_x: "{team_size} mod {team_size}"
     no_games: Der er ingen spil i systemet. <a href="{new_game_path}">Opret et spil</a> for at komme i gang.
+    form: 
+      name: Navn
+      team_size_help: "Antal spillere p\xC3\xA5 hvert hold"
+      player_roles: Spillerroller
+      details: Detaljer
+      cannot_change: "Denne indstiling kan ikke \xC3\xA6ndres da der er registreret kampe p\xC3\xA5 dette spil."
+      rules: Regler
+      player_roles_help: "Spillerroller, en per linie. F.eks.: Angreb, Forsvar"
+      team_size: "Holdst\xC3\xB8rrelse"
+      basics: "Grundl\xC3\xA6ggende"
+      newbie_limit_help: "Antal kampe en bruger skal spille for at f\xC3\xA5 tildelt en stilling."
+      newbie_limit: "Begynder-gr\xC3\xA6nse"
     team_size: "Holdst\xC3\xB8rrelse"
     create: Opret spil
+    updated: "\xC3\x86ndringerne er gemt."
+    created: Spil oprettet.
   activerecord: 
     errors: 
       messages: 
@@ -75,17 +90,6 @@ da:
     days_180: 180 dage
     days_360: 360 dage
     days_30: 30 dage
-  comments: 
-    comment: Kommentar
-  teams: 
-    winning_percentage: Procent vundne
-    matches_won: Kampe vundet
-    teams: Hold
-    total_ranking: Samlet stilling
-    percent_of_matches: "% af kampe"
-    members: Medlemmer
-    matches_played: Kampe spillet
-    show_teams_matches: Vis dette holds kampe
   dashboard: 
     leader: Nummer 1
     dashboard: Forside
@@ -96,20 +100,21 @@ da:
       score: Stilling
       team_two: Hold 2
     leader_boards: 
-      won: Vundet
       rankings: Stilling
+      won: Vundet
       newbies: Begyndere
       person: Person
       position_arrow_help: "Tallene i parentes: brugerens stilling 7 dage siden. Pilen indikerer stillingsforl\xC3\xB8b."
       ranking: Stilling
       diff_avg: Gns.forsk.
-      show_users_matches: Vis denne brugers kampe
       goal_diff_avg: "Gennemsnitlig m\xC3\xA5lforskel"
       lost: Tabt
-      newbie_limit: "mindre end {limit}\xC2\xA0kampe"
       played: Spillet
-      compare: Sammenlign
+      newbie_limit: "mindre end {limit}\xC2\xA0kampe"
+      show_users_matches: Vis denne brugers kampe
       win_percentage: Vind %
+      compare: Sammenlign
+    news: Nyheder
     totals: 
       by: af
       all_time_low: "D\xC3\xA5rligste"
@@ -117,7 +122,23 @@ da:
       points: Point
       totals: Totaler
       matches: Kampe
-    news: Nyheder
+  comments: 
+    comment: Kommentar
+    added: Kommentaren er gemt.
+    save_changes: "Gem \xC3\xA6ndringer"
+    add_error: Kunne ikke gemme kommentaren.
+    cancel: Fortryd
+    update_error: Indtast venligst en kommentar.
+    updated: "\xC3\x86ndringerne er gemt."
+  teams: 
+    winning_percentage: Procent vundne
+    matches_won: Kampe vundet
+    teams: Hold
+    total_ranking: Samlet stilling
+    percent_of_matches: "% af kampe"
+    members: Medlemmer
+    matches_played: Kampe spillet
+    show_teams_matches: Vis dette holds kampe
   time: 
     am: "f\xC3\xB8r middag"
     formats: 
@@ -189,34 +210,63 @@ da:
     array: 
       skip_last_comma: true
       sentence_connector: og
+  forms: 
+    creating: Opretter
+    create: Opret
+    update: Opdater
+    updating: Opdaterer
+  accounts: 
+    name: Navn
+    domain: "Dom\xC3\xA6ne"
+    accounts: Konti
+    users: Brugere
+    created: Oprettet
+    matches: Kampe
   footer: 
     source_code: Kildekode
-    project_home: Projektets hjemmeside
     feedback: Feedback
+    project_home: Projektets hjemmeside
     issue_tracker: Bug tracker
   users: 
+    normal: Normal
+    user_removed: Bruger slettet.
+    administration: Administration
+    edit: Rediger
+    super_admin: Superadmin
+    user_created: Bruger oprettet.
+    are_you_sure: Er du sikker?
+    edit_user: Rediger bruger
     create_user: Opret bruger
+    remove_user_sure: Fjern bruger. Er du sikker?
+    your_user_removed: Du har fjernet din konto.
+    admin: Admin
+    enable: Aktiver
     form: 
-      super_admin: Superadministrator
       picture_help: "Dette vil blive vist p\xC3\xA5 bruger-detalje siden, ved kommentarer og p\xC3\xA5 forsiden. Billedets st\xC3\xB8rrelse bliver automatisk tilpasset."
+      super_admin: Superadministrator
       create_user: Opret bruger
       confirm_password: "Bekr\xC3\xA6ft kodeord"
       advanced: Avanceret
       display_name_help: "En kort udgave af brugerens navn, s\xC3\xA5som fornavn eller \xC3\xB8genavn"
       account_admin_help: Tillad brugeren af redigere brugere og kontoindstillinger
-      account_admin: Kontoadministrator
-      basics: "Grundl\xC3\xA6ggende"
-      full_name: Fulde navn
       password_help: Udfyld kodeord-felterne for at skifte kodeord.
+      full_name: Fulde navn
+      basics: "Grundl\xC3\xA6ggende"
+      account_admin: Kontoadministrator
       display_name: Kort navn
       time_zone: Tidszone
       password: Kodeord
       login: Brugernavn
       update: Opdater
-      picture: Billede
       updating: Opdaterer
       email: E-mail
       creating_user: Opretter bruger
+      picture: Billede
+    remove: Fjern
+    remove_user: Fjern bruger
+    user_saved: Bruger gemt.
+    users: Brugere
+    disable: Deaktiver
   datetime: 
     distance_in_words: 
       less_than_x_minutes: 
@@ -252,12 +302,16 @@ da:
       half_a_minute: et halvt minut
   login: 
     sign_in: Log ind
+    log_out: Log af
     remember_me: Husk mig
     forgot_password: Glemt kodeord eller brugernavn?
+    unimpersonate: Unimpersonate
+    profile: Profil
     invalid_login: Ugyldigt brugernavn eller kodeord
-    signing_in: Logger ind
     password: Kodeord
     login: Brugernavn
+    signing_in: Logger ind
+    manage_account: Administrer konto
   compare: 
     ranking_chart: Stillingsgraf
     select_users: "V\xC3\xA6lg venligst hvilke brugere der skal sammenlignes til h\xC3\xB8jre."
@@ -265,8 +319,8 @@ da:
     update: Opdater
   menu: 
     games: Spil
-    teams: Hold
     dashboard: Forside
+    teams: Hold
     accounts: Konti
     users: Brugere
     add_match: "Tilf\xC3\xB8j kamp"
@@ -286,39 +340,40 @@ da:
       add: "Tilf\xC3\xB8j"
       cancel: Fortryd
       adding: "Tilf\xC3\xB8jer"
-      score: Point
       team: Hold
-    show_all_matches: Vis alle kampe
+      score: Point
     feeds: 
       all: Alle kampe
       filtered: Filtreret
       link_all: Atom feed (alle kampe)
       link_filtered: Atom feed (filtreret)
     player: Spiller
-    played_at: Spillet
+    show_all_matches: Vis alle kampe
     delete: Slet
+    played_at: Spillet
     comments: Kommentarer
     no_matches: Der er ingen kampe i databasen endnu.
+    show_team_details: Vis hold
+    after: Efter
+    team_one: Hold 1
     per_day: 
       per_day: Kampe spillet per dag
       date: Dato
       chart: Graf visende kampe per dag
       matches: Kampe
-    after: Efter
-    team_one: Hold 1
-    show_team_details: Vis hold
+    matches_per_day: Kampe per dag
     matches_for_x_y: Kampe for <b>{first}</b> og <b>{second}</b>
     awarded: Tildelt
-    loser: Taber
     delete_match_warning: "Slet kamp. Er du sikker?\\n\\nV\xC3\xA6r opm\xC3\xA6rksom p\xC3\xA5 at det kan tage et stykke tid for systemet at gennemf\xC3\xB8re sletningen."
+    loser: Taber
     by_user: af {user}
+    show_user_details: Vis bruger
+    score: Score
     before: !binary |
       RsO4cg==
 
-    score: Score
-    show_user_details: Vis bruger
     created: Oprettet
-    show_teams_matches: Vis dette holds kampe
     team_two: Hold 2
     add_comment: "Tilf\xC3\xB8j kommentar"
     matches: Kampe
+    show_teams_matches: Vis dette holds kampe
